--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Samuel Justina Onome | WDD 130</title>
     <meta name="description" content="Samuel Justina Onome's WDD 130 course home page showcasing personal information and web development learning">
     <meta name="author" content="Samuel Justina Onome">
-    <link rel="stylesheet" href="stylesheet/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
+            <a href="wwr/">Course Homepage</a>
         </nav>
     </header>
    
