--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Samuel Justina Onome | WDD 130</title>
     <meta name="description" content="Samuel Justina Onome's WDD 130 course home page showcasing personal information and web development learning">
     <meta name="author" content="Samuel Justina Onome">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
    
     <aside>
         <h2>Delta State, Nigeria</h2>
-        <img src="images/delta-state.jpg" alt="Delta State landscape" width="200" height="auto">
+        <img src="images/delta-state.jpg" alt="Delta State landscape" width="200" height="100">
         <p>Delta State is a state located in the southern part of Nigeria, known for its rich cultural diversity and economic significance. It is home to various ethnic groups, including Urhobo, Itsekiri, and Igbo. The state is renowned for its oil production and agricultural resources, making it a key contributor to Nigeria's economy.</p>
     </aside>
    
