--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting | About Us</title>
+    <meta name="description" content="This page is for a white rafting business that wants to have a relevant and useful online presence.">
+    <meta name="author" content="Samuel Justina Onome">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -22,7 +24,7 @@
 
     <main>
         <div class="hero">
-            <img src="images/hero-image.png" alt="Rafting Adventure Background">
+            <img src="images/hero-image.jpg" alt="Rafting Adventure Background">
             <h1>Wild Rapids Rafting</h1>
             <article>
                 <img src="images/happy client.jpg" alt="Happy Rafting Client">
@@ -48,11 +50,11 @@
 
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting adventure 1.jpg" alt="Rafting Adventure 1">
-            <img src="images/rafting adventure 2.jpg" alt="Rafting Adventure 2">
-            <img src="images/rafting adventure 3.jpg" alt="Rafting Adventure 3">
-            <img src="images/rafting adventure 4.jpg" alt="Rafting Adventure 4">
-            <img src="images/rafting adventure 5.jpg" alt="Rafting Adventure 5">
+            <img src="images/rafting-adventure 1.jpg" alt="Rafting Adventure 1">
+            <img src="images/rafting-adventure 2.jpg" alt="Rafting Adventure 2">
+            <img src="images/rafting-adventure 3.jpg" alt="Rafting Adventure 3">
+            <img src="images/rafting-adventure 4.jpg" alt="Rafting Adventure 4">
+            <img src="images/rafting-adventure 5.jpg" alt="Rafting Adventure 5">
         </section>
     </main>
 
