--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,74 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting | About Us</title>
-    <meta name="description" content="This page is for a white rafting business that wants to have a relevant and useful online presence.">
-    <meta name="author" content="Samuel Justina Onome">
+    <title>Wild Rapids Water Rafting | About Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Rafting Company Logo">
+        <img src="images/logo.png" alt="White Water Rafting Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-
     <main>
         <div class="hero">
-            <img src="images/hero-image.jpg" alt="Rafting Adventure Background">
-            <h1>Wild Rapids Rafting</h1>
+            <img src="images/hero-image.jpg" alt="Rafting in a canyon">
+            <h1>Wild Rapids Rafting Adventures</h1>
             <article>
-                <img src="images/happy client.jpg" alt="Happy Rafting Client">
-                <p>
-                    Our mission is to provide thrilling, safe, and unforgettable whitewater
-                    rafting experiences that connect people with nature's most exciting
-                    waterways. We believe in adventure, teamwork, and respect for the
-                    environment.
-                </p>
+                <img src="images/happyclient.jpg" alt="Happy Rafting Client">
+                <p>Experience the thrill of a lifetime with our expert guides and unforgettable white water rafting adventures in Delta State, Nigeria. We offer a range of trips for all skill levels, from peaceful floats to adrenaline-pumping rapids.  Safety is our top priority, and we are committed to providing a memorable and enjoyable experience for everyone.</p>
             </article>
         </div>
-
         <section>
             <h2>History</h2>
-            <p>
-                Founded in 1995 by adventure enthusiasts, Wild Rapids Rafting began as a
-                small local rafting outfit with just two boats and a passion for exploring
-                river rapids. Over the decades, we've grown into a premier rafting
-                destination, committed to providing safe, exhilarating experiences for
-                adventurers of all skill levels.
-            </p>
+            <p>Founded in 2024 by Samuel Justina Onome, a passionate advocate for adventure tourism in Nigeria, our company has quickly become a leading provider of white water rafting experiences.  We are dedicated to showcasing the natural beauty of Delta State and providing sustainable tourism opportunities for the local community.</p>
         </section>
-
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting-adventure 1.jpg" alt="Rafting Adventure 1">
-            <img src="images/rafting-adventure 2.jpg" alt="Rafting Adventure 2">
-            <img src="images/rafting-adventure 3.jpg" alt="Rafting Adventure 3">
-            <img src="images/rafting-adventure 4.jpg" alt="Rafting Adventure 4">
-            <img src="images/rafting-adventure 5.jpg" alt="Rafting Adventure 5">
+            <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
+            <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
+            <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
+            <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
+            <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
         </section>
     </main>
-
     <footer>
-        <p>&copy; 2025 Wild Rapids Rafting | Samuel Justina Onome</p>
+        <p>&copy; 2025 | Wild Rapids Rafting Adventures | Samuel Justina Onome, Delta State, Nigeria</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
-                <img src="images/facebook.jpg" alt="Facebook">
+              <img src="images/facebook.jpg" alt="Facebook">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.jpg" alt="Twitter">
+              <img src="images/twitter.jpg" alt="Twitter">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="Instagram">
+              <img src="images/instagram.jpg" alt="Instagram">
             </a>
-        </nav>
+          </nav>
     </footer>
 </body>
 </html>
