--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wild Rapids Water Rafting | About Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <title>Wild Rapids Adventures | About Us</title>
+    <meta name="description" content="White water rafting adventures for an exciting outdoor experience.">
+    <meta name="author" content="Samuel Justina Onome">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
@@ -11,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="White Water Rafting Logo">
+        <img src="images/logo.png" alt="Wild Rapids Adventures Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -21,16 +23,19 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero-image.jpg" alt="Rafting in a canyon">
-            <h1>Wild Rapids Rafting Adventures</h1>
-            <article>
-                <img src="images/happyclient.jpg" alt="Happy Rafting Client">
-                <p>Experience the thrill of a lifetime with our expert guides and unforgettable white water rafting adventures in Delta State, Nigeria. We offer a range of trips for all skill levels, from peaceful floats to adrenaline-pumping rapids.  Safety is our top priority, and we are committed to providing a memorable and enjoyable experience for everyone.</p>
-            </article>
+            <img src="images/hero-image.jpg" alt="Rafting Adventure">
+        
+                <h1>Wild Rapids Adventures</h1>
+                <article>
+                    <img src="images/happyclient.jpg" alt="Happy Rafting Client">
+                    <p>Experience the thrill of a lifetime with our expert guides and unforgettable white water rafting adventures in Delta State, Nigeria. We offer a range of trips for all skill levels, from peaceful floats to adrenaline-pumping rapids.  Safety is our top priority, and we are committed to providing a memorable and enjoyable experience for everyone.</p>
+                </article>
+            </div>
         </div>
+
         <section>
             <h2>History</h2>
-            <p>Founded in 2024 by Samuel Justina Onome, a passionate advocate for adventure tourism in Nigeria, our company has quickly become a leading provider of white water rafting experiences.  We are dedicated to showcasing the natural beauty of Delta State and providing sustainable tourism opportunities for the local community.</p>
+            <p>Founded in 2024 by Samuel Justina Onome, a passionate advocate for adventure tourism in Nigeria... </p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
@@ -42,17 +47,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 | Wild Rapids Rafting Adventures | Samuel Justina Onome, Delta State, Nigeria</p>
+        <p>&copy; 2025 Wild Rapids Adventures | Samuel Justina Onome</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com">
-              <img src="images/facebook.jpg" alt="Facebook">
-            </a>
-            <a href="https://twitter.com">
-              <img src="images/twitter.jpg" alt="Twitter">
-            </a>
-            <a href="https://instagram.com">
-              <img src="images/instagram.jpg" alt="Instagram">
-            </a>
+            <a href="https://facebook.com"><img src="images/facebook.jpg" alt="Facebook"></a>
+            <a href="https://twitter.com"><img src="images/twitter.jpg" alt="Twitter"></a>
+            <a href="https://instagram.com"><img src="images/instagram.jpg" alt="Instagram"></a>
           </nav>
     </footer>
 </body>
