--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,46 +13,67 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Wild Rapids Adventures Logo">
+        <img src="images/logo.png" alt="Wild Rapids Adventures Logo" class="logo">
+        <h1>Wild Rapids Adventures</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
+
     <main>
         <div class="hero">
-            <img src="images/hero-image.jpg" alt="Rafting Adventure">
-        
-                <h1>Wild Rapids Adventures</h1>
-                <article>
-                    <img src="images/happyclient.jpg" alt="Happy Rafting Client">
-                    <p>Experience the thrill of a lifetime with our expert guides and unforgettable white water rafting adventures in Delta State, Nigeria. We offer a range of trips for all skill levels, from peaceful floats to adrenaline-pumping rapids.  Safety is our top priority, and we are committed to providing a memorable and enjoyable experience for everyone.</p>
-                </article>
-            </div>
+            <img src="images/hero-image.jpg" alt="Rafting Adventure" class="hero-image">
+            <h1>Wild Rapids Adventures</h1>
+            <article>
+                <img src="images/happyclient.jpg" alt="Happy Rafting Client" class="client-image">
+                <p>Experience the thrill of a lifetime with our expert guides and unforgettable white water rafting adventures in Delta State, Nigeria. We offer a range of trips for all skill levels, from peaceful floats to adrenaline-pumping rapids. Safety is our top priority, and we are committed to providing a memorable and enjoyable experience for everyone.</p>
+            </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Founded in 2024 by Samuel Justina Onome, a passionate advocate for adventure tourism in Nigeria... </p>
+            <p>Founded in 2024 by Samuel Justina Onome, a passionate advocate for adventure tourism in Nigeria. Our mission is to bring excitement and joy to adventurers of all ages!</p>
         </section>
-        <section>
+
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
-            <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
-            <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
-            <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
-            <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
+            <div class="adventure-list">
+                <figure>
+                    <img src="images/rafting1.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting2.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting3.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="White Water Challenge">
+                    <figcaption>White Water Challenge</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting5.jpg" alt="Thrill Seeker's Dream">
+                    <figcaption>Thrill Seeker's Dream</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2025 Wild Rapids Adventures | Samuel Justina Onome</p>
-        <nav class="sociallinks">
+        <nav class="social-links">
             <a href="https://facebook.com"><img src="images/facebook.jpg" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/twitter.jpg" alt="Twitter"></a>
             <a href="https://instagram.com"><img src="images/instagram.jpg" alt="Instagram"></a>
-          </nav>
+        </nav>
     </footer>
 </body>
 </html>
