--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,15 +39,15 @@
             <h2>Meet Our Team</h2>
             <div class="employee-list">
                 <figure>
-                    <img src="images/employee1.jpg" alt="Team Member 1" class="employee-img">
+                    <img src="images/Emeke_Fortune.jpg" alt="Team Member 1" class="employee-img">
                     <figcaption>Emeke Fortune - Head Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpg" alt="Team Member 2" class="employee-img">
+                    <img src="images/Samuel_Rita.jpg" alt="Team Member 2" class="employee-img">
                     <figcaption>Samuel Rita- Trip Coordinator</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee3.jpg" alt="Team Member 3" class="employee-img">
+                    <img src="images/Imogu_Precious.jpg" alt="Team Member 3" class="employee-img">
                     <figcaption>Imogu Precious - Safety Expert</figcaption>
                 </figure>
             </div>
