--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -86,7 +86,7 @@
             <a href="https://twitter.com"><img src="images/twitter.jpg" alt="Twitter"></a>
             <a href="https://instagram.com"><img src="images/instagram.jpg" alt="Instagram"></a>
         </nav>
-        <p><a href="link-to-your-wireframe-image" target="_blank">View Contact Us Wireframe</a></p>
+        <p><a href="images/Contact_Wireframe.jpg" target="_blank">View Contact Us Wireframe</a></p>
     </footer>
 </body>
 </html>
